fix member thumnbail cropping

--- a/www/wp-content/themes/wp-theme/assets/sass/partials/_directory.sass
+++ b/www/wp-content/themes/wp-theme/assets/sass/partials/_directory.sass
@@ -21,13 +21,19 @@
 	padding-top: 33px
 	margin-bottom: 40px
 
-	img
+	.user-image
+		display: block
 		position: absolute
 		top: 0
 		left: 0
 		width: 140px
 		height: 140px
 		border-radius: 70px
+		background: no-repeat center center
+		-webkit-background-size: cover
+		-moz-background-size: cover
+		-o-background-size: cover
+		background-size: cover
 
 	h3
 		font-size: +em(26)
